Fix nav spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -164,7 +164,7 @@ body {
     .navbar .nav-links li {
       width: 100%;
       text-align: center;
-      padding: 18px 0;
+      padding: 12px 0;
     }
   
     .navbar .nav-links li a {
